Fixed buttons cut off on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ body {
     /* Bootstrap fixed navbar fix */
     padding-top: 40px;
     /* Margin bottom by footer height */
-    margin-bottom: 60px;
+    margin-bottom: 120px;
 }
 
 .page-header h1 {
